# Workshop-FastAPI

./: README-curl.md  README.md  exemplo_04.py  frontend.py  main.py  modelo.py  modelo_casas.pkl  pyproject.toml
api_openai/: __init__.py  exemplo_03.py  exemplo_04.py
crud/: accept.md  exemplo_00_erro_serializacao copy.py  exemplo_02_curl.py  exemplo_03.py
exemplo_csv/: csv_exemplo_bom.py  main.py  multiple_response.py  readme.md
modelo/: exemplo_00.py  exemplo_01.py  exemplo_02.py  exemplo_03.py
nasa_wikipedia/: readme.md
